Added the express module to the package.json file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**The Andela Developer Challenge Project**.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "npx eslint routes/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "eslint-plugin-import": "^2.15.0",
     "mocha": "^5.2.0",
     "supertest": "^3.4.2"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
