--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "lint": "npx eslint routes/*.js"
+    "lint": "npx eslint routes/*.js",
+    "start": "nodemon index.js --exec babel-node --"
   },
   "repository": {
     "type": "git",
@@ -25,13 +26,17 @@
   },
   "homepage": "https://github.com/oyekunle-mark/politico#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-env": "^2.4.1",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
     "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
     "supertest": "^3.4.2"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   }
 }
