--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "**The Andela Developer Challenge Project**.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --require babel-polyfill --require babel-register",
     "lint": "npx eslint routes/*.js",
     "start": "nodemon index.js --exec babel-node --"
   },
@@ -28,6 +28,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-env": "^2.4.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
