--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
     "mocha": "^5.2.0",
-    "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "supertest": "^3.4.2"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "morgan": "^1.9.1"
   }
 }
