--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-env": "^2.4.1",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
