--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "babel-cli": "^6.26.0",
+    "nodemon": "^1.18.9"
   }
 }
