--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx nyc --reporter=html --reporter=text npx mocha --exit --require babel-polyfill --require babel-register",
     "coverage": "npx nyc report --reporter=text-lcov | npx coveralls",
     "lint": "npx eslint . --ext .js",
-    "start": "npx nodemon index.js --exec npx babel-node --"
+    "start": "npx nodemon index.js --exec babel-node --"
   },
   "engines": {
     "node": "11.4.0",
@@ -49,8 +49,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "babel-cli": "^6.26.0",
-    "nodemon": "^1.18.9"
+    "morgan": "^1.9.1"
   }
 }
