--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "npx nyc --reporter=html --reporter=text npx mocha --exit --require babel-polyfill --require babel-register",
     "coverage": "npx nyc report --reporter=text-lcov | npx coveralls",
     "lint": "npx eslint . --ext .js",
-    "start": "npx nodemon index.js --exec babel-node --"
+    "start": "npx nodemon index.js --exec babel-node --",
+    "heroku-postbuild": "npm install --production"
   },
   "engines": {
     "node": "11.4.0",
     "npm": "6.5.0"
   },
-  "heroku-postbuild": "npm install --production",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oyekunle-mark/politico.git"
