--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,15 @@
 {
+    "root": true,
     "extends": "airbnb-base",
+    "env": {
+        "node": true,
+        "es6": true,
+        "mocha": true
+    },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "consistent-return": 0,
+        "comma-dangle": 0,
+        "curly": ["error", "multi-line"]
     }
 }
