--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "trim-request": "^1.0.6"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "pg": "^7.8.0",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
+    "pg": "^7.8.0",
     "trim-request": "^1.0.6"
   }
 }
