--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "npx eslint . --ext .js",
     "start": "npx nodemon index.js --exec babel-node --",
     "migration": "babel-node migration/createTable && babel-node migration/candidate",
-    "drop-migration": "babel-node migration/dropTable",
+    "drop-migration": "babel-node migration/dropTable && babel-node migration/dropTable",
     "heroku-postbuild": "npm install --production"
   },
   "engines": {
@@ -56,6 +56,7 @@
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "pg": "^7.8.0",
+    "swagger-ui-express": "^4.0.2",
     "trim-request": "^1.0.6"
   }
 }
