--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ cache:
   directories:
   - "node_modules"
 after_success: npm run coverage
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+
