--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ cache:
   directories:
   - "node_modules"
 after_success: npm run coverage
+services:
+- postgresql
+env:
+- DB_USERNAME=username DB_PASSWORD=password DBNAME=db_name
+before_script:
+- psql -c 'create database db_name;' -U postgres
+- psql -c "CREATE USER username WITH PASSWORD 'password';" -U postgres
