--- a/package.json
+++ b/package.json
@@ -51,10 +51,13 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "pg": "^7.8.0",
     "swagger-ui-express": "^4.0.2",
     "trim-request": "^1.0.6"
