ch(cors): Delivers the full challenge 3 - added cors - improved documentation - image uploads - improved validation [Delivers #164014993]

--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,6 @@ PGPASSWORD=user password
 PGPORT=the database port
 SECRET=the jwt secret key
 TEST_TOKEN=an dministrative token for the test scripts
+CLOUD_NAME=cloudinary cloud name
+API_KEY=cloudinary api key
+API_SECRET=cloudinary api secret
